# parse-colaborador-emserh-xls

./: README.md  colaboradores_emserh_09_12_2024.csv  pyproject.toml
src/parse_colaborador_emserh_xls/: colaboradores_emserh_09_12_2024.XLS  colaboradores_emserh_10_12_2024.XLS  main.py
