[project]
name = "parse-colaborador-emserh-xls"
version = "0"
description = "Default template for PDM package"
authors = [
    {name = "Bertoldo Klinger", email = "bertoldokbrj@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "datetime>=5.5",
    "requests>=2.32.3",
    "xlrd>=2.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
